--- a/Spree iOS/Base.lproj/Main.storyboard
+++ b/Spree iOS/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="-37" translatesAutoresizingMaskIntoConstraints="NO" id="RPo-uW-kUQ">
                                 <rect key="frame" x="0.0" y="550" width="600" height="50"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="R0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Haz-oc-Xjv">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="R0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Haz-oc-Xjv">
                                         <rect key="frame" x="0.0" y="0.0" width="510" height="50"/>
                                         <animations/>
                                         <color key="backgroundColor" red="0.8156862855" green="0.8156862855" blue="0.8156862855" alpha="1" colorSpace="calibratedRGB"/>
@@ -62,7 +62,7 @@
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wpH-Ti-CB4">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wpH-Ti-CB4">
                                         <rect key="frame" x="473" y="0.0" width="127" height="50"/>
                                         <animations/>
                                         <color key="backgroundColor" red="0.098039215690000001" green="0.18823529410000001" blue="0.43137254899999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -137,6 +137,10 @@
                                             <animations/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </view>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="ino-TZ-6FY">
+                                            <rect key="frame" x="40" y="8" width="95" height="149"/>
+                                            <animations/>
+                                        </imageView>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="1cE-EZ-g5h">
                                             <rect key="frame" x="10" y="7" width="155" height="150"/>
                                             <animations/>
@@ -183,6 +187,8 @@
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="AGC-Kr-eAn" secondAttribute="bottom" id="Dfx-mo-ltz"/>
+                                    <constraint firstItem="CA9-q0-3y3" firstAttribute="top" secondItem="ino-TZ-6FY" secondAttribute="bottom" id="ML5-6Q-Yar"/>
+                                    <constraint firstAttribute="trailing" secondItem="ino-TZ-6FY" secondAttribute="trailing" constant="40" id="NEl-t1-pWY"/>
                                     <constraint firstItem="0m7-Hp-qwh" firstAttribute="top" secondItem="tue-aW-G4S" secondAttribute="top" id="OVp-Q2-spZ"/>
                                     <constraint firstItem="0m7-Hp-qwh" firstAttribute="leading" secondItem="tue-aW-G4S" secondAttribute="leading" constant="5" id="SXK-m7-YZs"/>
                                     <constraint firstItem="84j-Ys-1DB" firstAttribute="leading" secondItem="tue-aW-G4S" secondAttribute="leading" id="X4Q-aP-YSj"/>
@@ -191,9 +197,11 @@
                                     <constraint firstItem="1cE-EZ-g5h" firstAttribute="centerY" secondItem="tue-aW-G4S" secondAttribute="centerY" constant="-30" id="Zns-Ol-yNt"/>
                                     <constraint firstAttribute="bottom" secondItem="0m7-Hp-qwh" secondAttribute="bottom" id="aDf-kP-q4K"/>
                                     <constraint firstItem="84j-Ys-1DB" firstAttribute="top" secondItem="CA9-q0-3y3" secondAttribute="bottom" id="f7e-xI-LrO"/>
+                                    <constraint firstItem="ino-TZ-6FY" firstAttribute="top" secondItem="tue-aW-G4S" secondAttribute="top" constant="8" id="fBJ-3I-T84"/>
                                     <constraint firstAttribute="trailing" secondItem="CA9-q0-3y3" secondAttribute="trailing" id="hLc-Ta-efr"/>
                                     <constraint firstItem="CA9-q0-3y3" firstAttribute="top" secondItem="1cE-EZ-g5h" secondAttribute="bottom" id="kR8-Tw-see"/>
                                     <constraint firstItem="1cE-EZ-g5h" firstAttribute="centerX" secondItem="tue-aW-G4S" secondAttribute="centerX" id="nHE-95-tP4"/>
+                                    <constraint firstItem="ino-TZ-6FY" firstAttribute="leading" secondItem="tue-aW-G4S" secondAttribute="leading" constant="40" id="qw9-tr-rIo"/>
                                     <constraint firstAttribute="trailing" secondItem="0m7-Hp-qwh" secondAttribute="trailing" constant="5" id="xjb-zi-khs"/>
                                     <constraint firstItem="CA9-q0-3y3" firstAttribute="leading" secondItem="tue-aW-G4S" secondAttribute="leading" id="z8a-xe-Hi6"/>
                                     <constraint firstAttribute="trailing" secondItem="84j-Ys-1DB" secondAttribute="trailing" id="zVA-XV-g4m"/>
@@ -220,7 +228,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6kN-8O-HUJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="716.5" y="1203.5"/>
+            <point key="canvasLocation" x="716" y="1203"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="A0s-qx-iBR">
